--- a/Asido-index.html
+++ b/Asido-index.html
@@ -1,31 +1,34 @@
 <DOCTYPE html>
 <html>
 <head>
-<title>First Activity</tittle>
 </head>
-</body>
+<body>
 
-<h1>Faith Asido</h1>
-<img src"Faith.jpg" alt="Faith" width="300" height="300">
-<a href="https://mail.google.com/mail/u/0/">faith.asido@lspu.edu.ph>This is the link</a>
-<a href="tel:+9510651430>09357460861</a>
+<h1>FAITH ASIDO</h1>
+<p>BSIT Student</p>
+<img src="Faith.jpg" alt="Faith" style="width:250px";heaight:250px">
+<br>
+<a href="tel:09510651430">09510651430</a>
 
-<h2>PROFILE</h2>
-<p>My anme is Faith A> Asido i live in Paete, Laguna im 20 years old, my birth day is February 3, 2002. My favorite food is spaghetti and potato. My parents is Veronica A. Asido and Jerry C. Asido and i have 2 brothers and 1 sister, my olders brothers name is Jake A. Asido 28 years old and my youngets brother is John Carlo A. Asido 23 and my sister is Praise A. Asido 21 years old. I graduated Paete Elementary School , Where finish schooling year last from Siniloan Integrated National high School</p>
+<h2>Profile</h2>
 
-<h2>Skills & Talent</h2>
-<p>Gaming</p>
-<p>Dancing</p>
-<p>Cooking</p>
-<h2>EDUCATION BACKGROUND</h2>
+<p>My anme is Faith A. Asido and im 20 years old. My Birthday is february 3, 2002.<br>
+I live in Paete,Laguna. My parents is Jerry c. Asido and Veronica A. Asido and i have 3 siblings,<br>
+my oldest brother Jake Asido and john Carlo Asido and 1 sister Praise Asido. I Graduated in Paete Elementary School and Junior and senior is in<br>
+Poten Eliseo M. Quesada Memorial National High School</p>
+
+<h2>Educational</h2>
 <h3>Elementary</h3>
 <p>Paete Elementary School</p>
-<h2>High School</h2>
-<p>Poten Eliseo M. Queseda Memorial National High School</p>
-<h2>Senior High School</h2>
-<p>Siniloan Integrated National High School</p>
-<h2>Colleger</h2>
-<p>Laguna State Polytechnic University</p>
-<p>Siniloan,Laguna</p>
+<p>2008 - 2014</p>
+<h3>High School</h3>
+<p>Poten Eliseo M. Quesada Memorial National High School</p>
+<p>2014 - 2018</p>
+<h3>Senior High School</h3>
+<p>2018 - 2020</p>
+<h3>College</h3>
+<a href="https://lspu.edu.ph/">Laguna State Polytechnic University</a>
+<p>2020 and so on</p>
+
 </body>
 </html>
